--- a/PackArquivos/templates/listarCadeiras.html
+++ b/PackArquivos/templates/listarCadeiras.html
@@ -46,57 +46,62 @@
                     <th class="col-sm-2" scope="col">OBSERVAÇÃO</th>
                     <th class="col-sm-1" scope="col">ENTREGUE</th>
                     <th class="col-sm-1" scope="col">FALTAM</th>
-                    <th class="col-sm-1" scope="col">VISUALIZAR</th>
+                    <th class="col-sm-1 text-center" scope="col">EDITAR</th>
                 </tr>
             </thead>
             <tbody>
 
                 {% for cadeira in cadeiras %}
-                    <tr>
-                        <th scope="row">{{ cadeira.id }}</th>
-                        <td> {{ cadeira.data.strftime('%d/%m/%Y') }} </td>
-                        <td> {{ cadeira.lote }} </td>
-                        <td> {{ cadeira.pecas }} </td>
-                        <td> {{ cadeira.cor }} </td>
+                    {% if (cadeira.quantidadeTotal - cadeira.quantidadeEntregue) > 0 %}
+                        <tr>
+                            <th scope="row">{{ cadeira.id }}</th>
+                            <td> {{ cadeira.data.strftime('%d/%m/%Y') }} </td>
+                            <td> {{ cadeira.lote }} </td>
+                            <td> {{ cadeira.pecas }} </td>
+                            <td> {{ cadeira.cor }} </td>
 
-                        <td>
-                            <div class="accordion accordion-flush h-25" id="accordion{{ cadeira.id }}">
-                                <div class="accordion-item">
-                                    <h2 class="accordion-header" id="flush-heading{{ cadeira.id }}">
-                                        <button class="accordion-button collapsed" type="button"
-                                                data-bs-toggle="collapse"
-                                                data-bs-target="#flush-collapse{{ cadeira.id }}" aria-expanded="false"
-                                                aria-controls="flush-collapse{{ cadeira.id }}"
-                                                style="margin: 0; padding: 0;">
-                                            OBSERVAÇÃO
-                                        </button>
-                                    </h2>
-                                    <div id="flush-collapse{{ cadeira.id }}" class="accordion-collapse collapse"
-                                         aria-labelledby="flush-heading{{ cadeira.id }}" data-bs-parent="#accordion{{ cadeira.id }}">
-                                        <div class="accordion-body">
-                                            {{ cadeira.pecas }}
+                            <td>
+                                <div class="accordion accordion-flush h-25" id="accordion{{ cadeira.id }}">
+                                    <div class="accordion-item">
+                                        <h2 class="accordion-header" id="flush-heading{{ cadeira.id }}">
+                                            <button class="accordion-button collapsed" type="button"
+                                                    data-bs-toggle="collapse"
+                                                    data-bs-target="#flush-collapse{{ cadeira.id }}" aria-expanded="false"
+                                                    aria-controls="flush-collapse{{ cadeira.id }}"
+                                                    style="margin: 0; padding: 0;">
+                                                OBSERVAÇÃO
+                                            </button>
+                                        </h2>
+                                        <div id="flush-collapse{{ cadeira.id }}" class="accordion-collapse collapse"
+                                             aria-labelledby="flush-heading{{ cadeira.id }}" data-bs-parent="#accordion{{ cadeira.id }}">
+                                            <div class="accordion-body">
+                                                {{ cadeira.pecas }}
+                                            </div>
                                         </div>
                                     </div>
                                 </div>
-                            </div>
-                        </td>
+                            </td>
 
-                        <td> {{ cadeira.quantidadeTotal }} </td>
-                        <td> {{ cadeira.quantidadeEntregue }} </td>
+                            <td> {{ cadeira.quantidadeEntregue }} </td>
+                            <td> {{ cadeira.quantidadeTotal - cadeira.quantidadeEntregue }} </td>
 
-                        <td style="text-align: center">
-                            <button class="btn btn-light" style="text-decoration: none; margin: 0; padding: 0" id="view">
-                                <a href="{{ url_for('Cadeira', cadeira_id=cadeira.id) }}">
-                                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
-                                         class="bi bi-eye-fill" viewBox="0 0 16 16"
-                                         style="width: 1.5rem; height: 1.5rem; text-decoration: none; margin: 0; padding: 0">
-                                        <path d="M10.5 8a2.5 2.5 0 1 1-5 0 2.5 2.5 0 0 1 5 0"/>
-                                        <path d="M0 8s3-5.5 8-5.5S16 8 16 8s-3 5.5-8 5.5S0 8 0 8m8 3.5a3.5 3.5 0 1 0 0-7 3.5 3.5 0 0 0 0 7"/>
-                                    </svg>
-                                </a>
-                            </button>
-                        </td>
-                    </tr>
+                            <td style="text-align: center">
+                                <button class="btn btn-light" style="text-decoration: none; margin: 0; padding: 0" id="view">
+                                    <a href="{{ url_for('Cadeira', cadeira_id=cadeira.id) }}">
+
+                                        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+                                             class="bi bi-pencil-square" viewBox="0 0 16 16"
+                                             style="width: 1.5rem; height: 1.5rem; text-decoration: none; margin: 0; padding: 0">
+                                            <path d="M15.502 1.94a.5.5 0 0 1 0 .706L14.459 3.69l-2-2L13.502.646a.5.5 0 0 1 .707 0l1.293 1.293zm-1.75 2.456-2-2L4.939 9.21a.5.5 0 0 0-.121.196l-.805 2.414a.25.25 0 0 0 .316.316l2.414-.805a.5.5 0 0 0 .196-.12l6.813-6.814z"/>
+                                            <path fill-rule="evenodd"
+                                                  d="M1 13.5A1.5 1.5 0 0 0 2.5 15h11a1.5 1.5 0 0 0 1.5-1.5v-6a.5.5 0 0 0-1 0v6a.5.5 0 0 1-.5.5h-11a.5.5 0 0 1-.5-.5v-11a.5.5 0 0 1 .5-.5H9a.5.5 0 0 0 0-1H2.5A1.5 1.5 0 0 0 1 2.5z"/>
+                                        </svg>
+                                    </a>
+                                </button>
+                            </td>
+                        </tr>
+                    {% else %}
+                    {% endif %}
                 {% endfor %}
 
             </tbody>
