--- a/PackArquivos/templates/base.html
+++ b/PackArquivos/templates/base.html
@@ -35,7 +35,7 @@
         {% block table %}
         {% endblock %}
 
-        <div id="container-body" class="container">
+        <div id="container-body">
             {% block body %}
             {% endblock %}
         </div>
