--- a/PackArquivos/templates/index.html
+++ b/PackArquivos/templates/index.html
@@ -2,6 +2,7 @@
 
 {% block body %}
     <div class="container">
-
+        <button>Gerar relatório Cadeiras</button>
+        <button>Gerar relatório Cadeiras</button>
     </div>
 {% endblock %}
