--- a/PackArquivos/templates/listarCadeiras.html
+++ b/PackArquivos/templates/listarCadeiras.html
@@ -6,12 +6,17 @@
         <h1 class="text-center mt-2">CADEIRAS EM ATRASO</h1>
         <hr style="margin: 0; padding: 0">
         <div class="row mt-2">
-            <div class="col-sm-10">
+            <div class="col-sm-5">
                 <a href="{{ url_for('atrasoCadeiras') }}" style="text-decoration: none">
                     <button type="button" class="btn btn-outline-primary">
                         Lançar cadeira
                     </button>
                 </a>
+            </div>
+            <div class="col-sm-5">
+                <form method="GET" action="{{ url_for('generate_pdf', categoria="cadeiras") }}">
+                    <button type="submit" class="btn btn-outline-dark">Gerar relatório cadeiras</button>
+                </form>
             </div>
             <div class="col-sm-1 mt-1">
                 ORDENAR
@@ -75,7 +80,7 @@
                                         <div id="flush-collapse{{ cadeira.id }}" class="accordion-collapse collapse"
                                              aria-labelledby="flush-heading{{ cadeira.id }}" data-bs-parent="#accordion{{ cadeira.id }}">
                                             <div class="accordion-body">
-                                                {{ cadeira.pecas }}
+                                                {{ cadeira.obs }}
                                             </div>
                                         </div>
                                     </div>
