--- a/PackArquivos/templates/listarCurvados.html
+++ b/PackArquivos/templates/listarCurvados.html
@@ -6,12 +6,17 @@
         <h1 class="text-center mt-2">CURVADOS EM ATRASO</h1>
         <hr style="margin: 0; padding: 0">
         <div class="row mt-2">
-            <div class="col-sm-10">
+            <div class="col-sm-5">
                 <a href="{{ url_for('atrasoCurvados') }}" style="text-decoration: none">
                     <button type="button" class="btn btn-outline-primary">
                         Lançar curvado
                     </button>
                 </a>
+            </div>
+            <div class="col-sm-5 mt-1">
+                <form method="GET" action="{{ url_for('generate_pdf', categoria="curvados") }}">
+                    <button type="submit" class="btn btn-outline-dark">Gerar relatório curvados</button>
+                </form>
             </div>
             <div class="col-sm-1 mt-1">
                 ORDENAR
