--- a/PackArquivos/templates/navbar.html
+++ b/PackArquivos/templates/navbar.html
@@ -1,6 +1,6 @@
-<nav class="navbar navbar-expand-lg navbar-light bg-warning">
+<nav class="navbar navbar-expand-lg navbar-dark" style="background-color: #003366;">
     <div class="container-fluid">
-        <a class="navbar-brand" href="{{ url_for('index') }}">Estoque</a>
+        <a class="navbar-brand" href="{{ url_for('index') }}" data-bs-theme="ligth">Estoque</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
                 aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -13,20 +13,10 @@
                        data-bs-toggle="dropdown" aria-expanded="false">
                         Atrasos
                     </a>
-                    <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                        <li class="nav-item">
-                            <a class="nav-link active" aria-current="page"
-                               href="{{ url_for('atrasoCadeiras') }}">Cadeiras
-                            </a>
-                        </li>
-                        <li>
-                            <hr class="dropdown-divider">
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link active" aria-current="page"
-                               href="{{ url_for('atrasoCurvados') }}">Curvados
-                            </a>
-                        </li>
+                    <ul class="dropdown-menu" aria-labelledby="navbarDropdown_1">
+                        <li><a class="dropdown-item" href="{{ url_for('atrasoCadeiras') }}">Cadeiras</a></li>
+                        <li><hr class="dropdown-divider"></li>
+                        <li><a class="dropdown-item" href="{{ url_for('atrasoCurvados') }}">Curvados</a></li>
                     </ul>
                 </li>
 
@@ -35,20 +25,10 @@
                        data-bs-toggle="dropdown" aria-expanded="false">
                         Listar Atraso
                     </a>
-                    <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                        <li class="nav-item">
-                            <a class="nav-link active" aria-current="page"
-                               href="{{ url_for('listarCadeiras') }}">Cadeiras
-                            </a>
-                        </li>
-                        <li>
-                            <hr class="dropdown-divider">
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link active" aria-current="page"
-                               href="{{ url_for('listarCurvados') }}">Curvados
-                            </a>
-                        </li>
+                    <ul class="dropdown-menu" aria-labelledby="navbarDropdown_2">
+                        <li><a class="dropdown-item" href="{{ url_for('listarCadeiras') }}">Cadeiras</a></li>
+                        <li><hr class="dropdown-divider"></li>
+                        <li><a class="dropdown-item" href="{{ url_for('listarCurvados') }}">Curvados</a></li>
                     </ul>
                 </li>
             </ul>
